--- a/index.html
+++ b/index.html
@@ -53,13 +53,10 @@
       z-index: 10;
     }
 
-    .gif-container {
+ .gif-container {
   width: 88vw;
   max-width: 360px;
   height: 220px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 28px;
   background: var(--canvas-bg);
   border-radius: 20px;
   display: flex;
@@ -68,6 +65,10 @@
   overflow: hidden;
   border: 3px solid #f0eaed;
   box-shadow: inset 0 2px 8px rgba(0,0,0,0.03);
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 28px;
 }
 
     .character-img {
